--- a/configuration.yaml
+++ b/configuration.yaml
@@ -93,12 +93,12 @@ cast:
     - host: !secret ip_chromecast
     - host: !secret ip_google_home
 
-light: !include lights.yaml
-switch: !include switches.yaml
-sensor: !include sensors.yaml
-camera: !include cameras.yaml
-climate: !include climates.yaml
-media_player: !include media_players.yaml
+light: !include devices/lights.yaml
+switch: !include devices/switches.yaml
+sensor: !include devices/sensors.yaml
+camera: !include devices/cameras.yaml
+climate: !include devices/climates.yaml
+media_player: !include devices/media_players.yaml
 
 # Other config
 
