--- a/configuration.yaml
+++ b/configuration.yaml
@@ -104,7 +104,7 @@ media_player: !include devices/media_players.yaml
 
 scene: !include scenes.yaml
 group: !include groups.yaml
-automation: !include automations.yaml
+automation: !include_dir_list automations
 script: !include scripts.yaml
 
 
