--- a/configuration.yaml
+++ b/configuration.yaml
@@ -104,7 +104,5 @@ media_player: !include devices/media_players.yaml
 
 scene: !include scenes.yaml
 group: !include groups.yaml
-automation: !include_dir_list automations
-script: !include scripts.yaml
-
-
+automation: !include_dir_list automations/
+script: !include_dir_merge_named scripts/
