Updated UI :lipstick:

--- a/themes/clear.yaml
+++ b/themes/clear.yaml
@@ -1,6 +1,6 @@
 clear:
   # Background image
-  background-image: 'center / cover no-repeat url("/local/background.jpg") fixed'
+  background-image: 'center / cover no-repeat url("/local/day.jpg") fixed'
 
   # Colors
   text-color: '#636B75'                                                           # Grey text
