--- a/automations/theme/start.yaml
+++ b/automations/theme/start.yaml
@@ -1,8 +1,8 @@
-alias: "Default Theme after Sunrise"
+alias: Set theme on startup
 trigger:
-  platform: sun
-  event: sunrise
-  offset: "+00:00:00"
+- event: start
+  platform: homeassistant
+condition: []
 initial_state: true
 action:
   - service: frontend.set_theme
