--- a/automations/theme/night.yaml
+++ b/automations/theme/night.yaml
@@ -3,6 +3,7 @@ trigger:
   platform: sun
   event: sunset
   offset: "+00:00:00"
+initial_state: true
 action:
   - service: frontend.set_theme
     data:
