--- a/configuration.yaml
+++ b/configuration.yaml
@@ -112,3 +112,4 @@ group: !include groups.yaml
 automation: !include_dir_list automations/
 script: !include_dir_merge_named scripts/
 zone: !include zones.yaml
+timer: !include timers.yaml
