--- a/automations/theme/day.yaml
+++ b/automations/theme/day.yaml
@@ -8,7 +8,7 @@ trigger:
 condition:
   - condition: state
     entity_id: sun
-    state: above_horizon
+    state: "above_horizon"
 initial_state: true
 action:
   - service: frontend.set_theme
