--- a/automations/geolocation/track_time_from_home_to_work.yaml
+++ b/automations/geolocation/track_time_from_home_to_work.yaml
@@ -8,7 +8,7 @@ trigger:
 action:
   - service: timer.start
     entity_id: timer.time_from_home_to_work
-  - wait_template: "{{ is_state('device_tracker.aleix_mobil', 'feina') }}"
+  - wait_template: "{{ is_state('device_tracker.aleix_mobil', 'Feina') }}"
     timeout: "01:00:00"
     continue_on_timeout: "false"
   - service: timer.finish
