--- a/automations/geolocation/track_time_from_work_to_home.yaml
+++ b/automations/geolocation/track_time_from_work_to_home.yaml
@@ -8,7 +8,7 @@ trigger:
 action:
   - service: timer.start
     entity_id: timer.time_from_work_to_home
-  - wait_template: "{{ is_state('device_tracker.aleix_mobil', 'home') }}"
+  - wait_template: "{{ is_state('device_tracker.aleix_mobil', 'A casa') }}"
     timeout: "01:00:00"
     continue_on_timeout: "false"
   - service: timer.finish
