Added hist sensors

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,7 @@ homeassistant:
   elevation: 102
   unit_system: metric
   time_zone: UTC
-  customize: !include customize.yaml
+  # customize: !include customize.yaml
   whitelist_external_dirs:
     - /tmp/
 
