--- a/devices/climates.yaml
+++ b/devices/climates.yaml
@@ -12,7 +12,7 @@
     minutes: 5
   keep_alive:
     minutes: 3
-  initial_operation_mode: "off"
+  initial_hvac_mode: "off"
   away_temp: 16
   precision: 0.1
 - platform: generic_thermostat
@@ -29,6 +29,6 @@
     minutes: 5
   keep_alive:
     minutes: 3
-  initial_operation_mode: "off"
+  initial_hvac_mode: "off"
   away_temp: 16
   precision: 0.1
