--- a/devices/sensors.yaml
+++ b/devices/sensors.yaml
@@ -58,3 +58,19 @@
   type: time
   start: "{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}"
   end: "{{ now() }}"
+- platform: history_stats
+  name: Time other
+  entity_id: device_tracker.aleix_mobil
+  state: "fora"
+  type: time
+  start: "{{ now().replace(hour=0).replace(minute=0).replace(second=0) }}"
+  end: "{{ now() }}"
+- platform: time_date 
+  display_options:
+    - 'time'
+    - 'date'
+    - 'date_time'
+    - 'date_time_iso'
+    - 'time_date'
+    - 'time_utc'
+    - 'beat'
