--- a/automations/scheduled/0710_set_brightness_entrance.yaml
+++ b/automations/scheduled/0710_set_brightness_entrance.yaml
@@ -5,8 +5,8 @@ trigger:
   platform: state
   to: 'on'
 condition:
-- after: 06:40
-  before: '21:59'
+- after: '07:30:00'
+  before: '21:59:00'
   condition: time
 action:
 - data:
