--- a/lovelace/00_home_modern_2.yaml
+++ b/lovelace/00_home_modern_2.yaml
@@ -156,7 +156,7 @@ cards:
                               - color: "rgb(251, 210, 41)"
                                 icon: "mdi:television-classic"
                                 value: playing
-                  - template: horizontal-stack
+                  - type: horizontal-stack
                     cards:
                       - template: nest_button
                         type: "custom:decluttering-card"
@@ -214,7 +214,7 @@ cards:
                               - color: "rgb(251, 210, 41)"
                                 icon: "mdi:lightbulb"
                                 value: "on"
-                  - template: horizontal-stack
+                  - type: horizontal-stack
                     cards:
                       - template: nest_button
                         type: "custom:decluttering-card"
@@ -264,7 +264,7 @@ cards:
                                 icon: "mdi:walk"
                                 operator: ">"
                                 value: 9
-                  - template: horizontal-stack
+                  - type: horizontal-stack
                     cards:
                       - template: nest_button
                         type: "custom:decluttering-card"
@@ -362,115 +362,62 @@ cards:
                                 icon: "mdi:thermometer-alert"
                                 operator: ">"
                                 value: 75
-
-                      - cards:
-                          - color_thresholds:
-                              - color: "#008040"
-                                value: 0
-                              - color: "#E5E500"
-                                value: 51
-                              - color: "#E59400"
-                                value: 1001
-                            color_trhesholds_transition: soft
-                            entities:
-                              - >-
-                                sensor.waqi_barcelona_parc_vall_d_hebron_catalunya_spain
-                            icon: "mdi:weather-windy"
-                            line_color: "#00C6C5"
-                            line_width: 0
-                            name: Vall hebron
-                            type: "custom:mini-graph-card"
-                          - color_thresholds:
-                              - color: "#008040"
-                                value: 0
-                              - color: "#E5E500"
-                                value: 51
-                              - color: "#E59400"
-                                value: 1001
-                            color_trhesholds_transition: soft
-                            entities:
-                              - >-
-                                sensor.waqi_barcelona_poblenou_catalunya_spain
-                            icon: "mdi:weather-windy"
-                            line_color: "#00C6C5"
-                            line_width: 0
-                            name: Poble nou
-                            type: "custom:mini-graph-card"
-                          - color_thresholds:
-                              - color: "#008040"
-                                value: 0
-                              - color: "#E5E500"
-                                value: 51
-                              - color: "#E59400"
-                                value: 1001
-                            color_trhesholds_transition: soft
-                            entities:
-                              - >-
-                                sensor.waqi_barcelona_eixample_catalunya_spain
-                            icon: "mdi:weather-windy"
-                            line_color: "#00C6C5"
-                            line_width: 0
-                            name: Eixample
-                            type: "custom:mini-graph-card"
-                        type: horizontal-stack
-                    type: vertical-stack
-                  - cards:
-                      - artwork: cover
-                        entity: media_player.spotify
-                        hide:
-                          power_state: false
-                          source: true
-                          volume: true
-                        icon: "mdi:spotify"
-                        name: Spotify Aleix
-                        type: "custom:mini-media-player"
-                      - columns: 3
-                        entities:
-                          - entity: scene.buenos_dias
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.buenos_dias
-                          - entity: scene.cena
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.cena
-                          - entity: scene.con_amigos
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.con_amigos
-                          - entity: scene.juegos_de_mesa
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.juegos_de_mesa
-                          - entity: scene.relax
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.relax
-                          - entity: scene.tele
-                            tap_action:
-                              action: call-service
-                              service: scene.turn_on
-                              service_data:
-                                entity_id: scene.tele
-                        show_state: false
-                        type: glance
-                      - camera_image: camera.escala
-                        entities:
-                          - camera.escala
-                        title: Entrada
-                        type: picture-glance
-                    type: vertical-stack
-            type: vertical-stack
+          - type: vertical-stack
+            cards:
+              - artwork: cover
+                entity: media_player.spotify
+                hide:
+                  power_state: false
+                  source: true
+                  volume: true
+                icon: "mdi:spotify"
+                name: Spotify Aleix
+                type: "custom:mini-media-player"
+              - columns: 3
+                entities:
+                  - entity: scene.buenos_dias
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.buenos_dias
+                  - entity: scene.cena
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.cena
+                  - entity: scene.con_amigos
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.con_amigos
+                  - entity: scene.juegos_de_mesa
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.juegos_de_mesa
+                  - entity: scene.relax
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.relax
+                  - entity: scene.tele
+                    tap_action:
+                      action: call-service
+                      service: scene.turn_on
+                      service_data:
+                        entity_id: scene.tele
+                show_state: false
+                type: glance
+              - camera_image: camera.escala
+                entities:
+                  - camera.escala
+                title: Entrada
+                type: picture-glance
         column_num: 2
         layout: horizontal
         max_columns: 2
