--- a/automations/scheduled/0710_set_brightness_entrance.yaml
+++ b/automations/scheduled/0710_set_brightness_entrance.yaml
@@ -1,17 +1,16 @@
 alias: 07:10 - Higher brightness entrance
 trigger:
-- entity_id: light.entrada
-  from: 'off'
-  platform: state
-  to: 'on'
+  - entity_id: light.entrada
+    from: "off"
+    platform: state
+    to: "on"
 condition:
-- after: '07:30:00'
-  before: '21:59:00'
-  condition: time
+  - after: "07:30:00"
+    before: "21:59:00"
+    condition: time
 action:
-- data:
-    brightness: 250
-    entity_id: light.entrada
-    transition: 10
-  service: light.turn_on
+  - data:
+      brightness: 250
+      entity_id: light.entrada
+    service: light.turn_on
 initial_state: true
