--- a/automations/scheduled/2200_set_brightness_entrance.yaml
+++ b/automations/scheduled/2200_set_brightness_entrance.yaml
@@ -1,18 +1,17 @@
 alias: 22:00 - Lower brightness entrance
 trigger:
-- entity_id: light.entrada
-  from: 'off'
-  platform: state
-  to: 'on'
+  - entity_id: light.entrada
+    from: "off"
+    platform: state
+    to: "on"
 condition:
-- after: '22:00:00'
-  before: '06:30:00'
-  condition: time
+  - after: "22:00:00"
+    before: "06:30:00"
+    condition: time
 action:
-- data:
-    brightness: 10
-    entity_id: light.entrada
-    transition: 10
-  service: light.turn_on
+  - data:
+      brightness: 10
+      entity_id: light.entrada
+    service: light.turn_on
 initial_state: true
 hide_entity: true
