--- a/lovelace/00_home_modern_2.yaml
+++ b/lovelace/00_home_modern_2.yaml
@@ -271,13 +271,15 @@ cards:
                                 value: 9
                   - type: horizontal-stack
                     cards:
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Dormitori
                           - entity: sensor.dormitori_temperature
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#FEBF93"
                                 icon: "mdi:thermometer"
@@ -287,13 +289,15 @@ cards:
                                 icon: "mdi:thermometer-alert"
                                 operator: ">"
                                 value: 27
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Dormitori
                           - entity: sensor.dormitori_humidity
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#93BCFE"
                                 icon: "mdi:water-percent"
@@ -303,13 +307,15 @@ cards:
                                 icon: "mdi:water-percent"
                                 operator: ">"
                                 value: 75
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Menjador
                           - entity: sensor.menjador_temperature
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#FEBF93"
                                 icon: "mdi:thermometer"
@@ -319,13 +325,15 @@ cards:
                                 icon: "mdi:thermometer-alert"
                                 operator: ">"
                                 value: 27
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Menjador
                           - entity: sensor.menjador_humidity
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#93BCFE"
                                 icon: "mdi:water-percent"
@@ -335,13 +343,15 @@ cards:
                                 icon: "mdi:water-percent"
                                 operator: ">"
                                 value: 75
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Exterior
                           - entity: sensor.exterior_temperature
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#FEBF93"
                                 icon: "mdi:thermometer"
@@ -351,13 +361,15 @@ cards:
                                 icon: "mdi:thermometer-alert"
                                 operator: ">"
                                 value: 27
-                      - template: nest_button_info
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_last_changed: false
                           - name: Exterior
                           - entity: sensor.exterior_humidity
+                          - tap_action:
+                              action: more-info
                           - state:
                               - color: "#93BCFE"
                                 icon: "mdi:water-percent"
@@ -369,90 +381,102 @@ cards:
                                 value: 75
                   - type: horizontal-stack
                     cards:
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.buenos_dias
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.buenos_dias
                           - name: Buenos días
                           - entity: scene.buenos_dias
                           - state:
                               - color: "#CC93FE"
                                 icon: "mdi:weather-sunny"
                                 value: scening
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.cena
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.cena
                           - name: Cena
                           - entity: scene.cena
                           - state:
                               - color: "#CC93FE"
                                 icon: "mdi:silverware-fork-knife"
                                 value: scening
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.con_amigos
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.con_amigos
                           - name: Amigos
                           - entity: scene.con_amigos
                           - state:
                               - color: "#CC93FE"
                                 icon: "mdi:account-group"
                                 value: scening
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.juegos_de_mesa
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.juegos_de_mesa
                           - name: Juegos
                           - entity: scene.juegos_de_mesa
                           - state:
                               - color: "#CC93FE"
                                 icon: "mdi:chess-knight"
                                 value: scening
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.relax
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.relax
                           - name: Relax
                           - entity: scene.relax
                           - state:
                               - color: "#CC93FE"
                                 icon: "mdi:book-open-page-variant"
                                 value: scening
-                      - template: nest_button_service
+                      - template: nest_button
                         type: "custom:decluttering-card"
                         variables:
                           - show_name: true
                           - show_state: false
                           - show_last_changed: false
-                          - service_id: scene.turn_on
-                          - service_data:
-                              entity_id: scene.tele
+                          - tap_action:
+                              action: service
+                              service: scene.turn_on
+                              service_data:
+                                entity_id: scene.tele
                           - name: Tele
                           - entity: scene.tele
                           - state:
